--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,15 @@
 	justify-content: flex-end;
   }
  
+  .product-info{
+	font-size: 20px;
+	margin-bottom: 10px;
+  }
+  .drop-down{
+	margin-top:20px;
+  }
+  
+  .add-button{
+	margin-top:20px;
+	width: 100%;
+  }
